--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "jest --coverage",
     "lint": "eslint --ext .js,.ts,.tsx,.jsx ./",
     "lint:fix": "eslint --ext .js,.ts,.tsx,.jsx ./ --fix",
-    "prettier": "prettier --write '**/*.{ts,tsx,js,jsx}'"
+    "prettier": "prettier --write '**/*.{ts,tsx,js,jsx}'",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook -o docs"
   },
   "repository": {
     "type": "git",
@@ -29,23 +31,26 @@
     "npm": ">= 3.0.0"
   },
   "browserslist": "> 0.25%, not dead",
-  "peerDependencies": {
-    "classnames": "^2.2.6",
-    "react": "^16.14.0"
-  },
   "dependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.14.0"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@storybook/addon-actions": "^6.3.5",
+    "@storybook/addon-essentials": "^6.3.5",
+    "@storybook/addon-links": "^6.3.5",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/manager-webpack5": "^6.3.7",
+    "@storybook/react": "^6.3.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.1",
     "@types/react": "^16.14.14",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "autoprefixer": "^9.8.6",
@@ -62,6 +67,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "html-webpack-plugin": "^4.5.2",
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^2.2.0",
     "postcss": "^8.3.6",
@@ -75,7 +81,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "terser-webpack-plugin": "^5.1.4",
     "ts-essentials": "^7.0.1",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^5.3.0",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
