--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "html-webpack-plugin": "^4.5.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^2.2.0",
     "postcss": "^8.3.6",
@@ -77,6 +78,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.38.1",
     "sass-loader": "^12.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "terser-webpack-plugin": "^5.1.4",
