--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "main": "dist/root-ui.min.js",
   "scripts": {
-    "prebuild": "rimraf dist/*",
+    "tailwind:build": "postcss public/tailwind.css -o dist/tailwind.css",
+    "prebuild": "rimraf dist/* && npm run tailwind:build",
     "build": "webpack --config=build/webpack.prod.js",
     "start": "node express.js",
     "start:dev": "webpack serve --config=build/webpack.dev.js",
@@ -13,7 +14,11 @@
     "test": "jest --coverage",
     "lint": "eslint --ext .js,.ts,.tsx,.jsx ./",
     "lint:fix": "eslint --ext .js,.ts,.tsx,.jsx ./ --fix",
-    "prettier": "prettier --write '**/*.{ts,tsx,js,jsx}'"
+    "prettier": "prettier --write '**/*.{ts,tsx,js,jsx}'",
+    "prestorybook": "npm run tailwind:build",
+    "storybook": "start-storybook -p 6006",
+    "prestorybook:build": "npm run tailwind:build",
+    "storybook:build": "build-storybook -o docs"
   },
   "repository": {
     "type": "git",
@@ -31,21 +36,29 @@
   "browserslist": "> 0.25%, not dead",
   "peerDependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.14.0"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.14.0"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/builder-webpack5": "^6.3.7",
+    "@storybook/react": "^6.3.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.1",
     "@types/react": "^16.14.14",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "autoprefixer": "^9.8.6",
@@ -62,21 +75,24 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "html-webpack-plugin": "^4.5.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^2.2.0",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.1.1",
-    "postcss-nesting": "^7.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.38.1",
     "sass-loader": "^12.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "terser-webpack-plugin": "^5.1.4",
     "ts-essentials": "^7.0.1",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^5.3.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
