--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/jest": "^27.0.1",
     "@types/react": "^16.14.14",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.30.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
     "core-js": "^3.10.1",
@@ -74,7 +75,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.25.1",
     "html-webpack-plugin": "^4.5.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
