chore(github): update github workflows

--- a/.github/workflows/dev-build-test.yml
+++ b/.github/workflows/dev-build-test.yml
@@ -2,24 +2,21 @@ name: Dev Build
 
 on:
   push:
-    branches: [master, develop]
-  pull_request:
-    branches: [master, develop, /^release/.*$/, /^feature/.*$/, /^hotfix/.*$/]
-    types: [closed]
+    branches: [develop]
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [14.x]
 
     steps:
-      # MAIN_MODULE
       - name: Checkout
         uses: actions/checkout@v2
 
-      # NODE_VERSIONING
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -28,17 +25,11 @@ jobs:
       - name: Install
         run: npm ci
 
-      - name: Test
-        run: npm run test
-
       - name: Lint
         run: npm run lint
 
+      - name: Test
+        run: npm run test
+
       - name: Build
         run: npm run build
-
-      - name: Slack Notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_CHANNEL: dev-travis
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
