--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
       time: '11:00'
       timezone: Asia/Seoul
     open-pull-requests-limit: 10
-    target-branch: main
+    target-branch: develop
     reviewers:
       - "Seolhun"
     labels:
