chore(actions): update github actions

--- a/.github/workflows/stage-build-test.yml
+++ b/.github/workflows/stage-build-test.yml
@@ -11,25 +11,33 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install
+      - name: Install Packages
+        if: ${{ always() }}
         run: npm ci
 
-      - name: Lint
+      - name: Test
+        if: ${{ always() }}
         run: npm run lint
 
       - name: Test
+        if: ${{ always() }}
         run: npm run test
 
+      - name: Build Storybook
+        if: ${{ always() }}
+        run: npm run storybook:build
+
       - name: Build
+        if: ${{ always() }}
         run: npm run build
