--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -51,11 +52,11 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/builder-webpack5": "^6.3.7",
-    "@storybook/manager-webpack5": "^6.3.7",
-    "@storybook/react": "^6.3.7",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/react": "^6.5.9",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
@@ -65,8 +66,9 @@
     "@typescript-eslint/parser": "^4.30.0",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.2",
+    "babel-preset-minify": "^0.5.2",
     "core-js": "^3.23.4",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "csstype": "^3.0.8",
     "eslint": "^7.30.0",
@@ -82,23 +84,22 @@
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^7.0.0",
-    "postcss": "^8.3.6",
+    "postcss": "^8.4.14",
     "postcss-cli": "^8.3.1",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-import": "^14.1.0",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "7.7.2",
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.38.1",
+    "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "terser-webpack-plugin": "^5.1.4",
     "ts-essentials": "^7.0.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.7.4",
-    "webpack": "^5.51.1",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
+    "webpack-dev-server": "^4.9.3",
     "webpack-merge": "^5.8.0"
   }
 }
