--- a/package.json
+++ b/package.json
@@ -35,15 +35,13 @@
   },
   "browserslist": "> 0.25%, not dead",
   "peerDependencies": {
-    "classnames": "^2.2.6",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "classnames": "^2.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   },
   "devDependencies": {
