--- a/.github/workflows/stage-build-test.yml
+++ b/.github/workflows/stage-build-test.yml
@@ -26,7 +26,7 @@ jobs:
         if: ${{ always() }}
         run: npm ci
 
-      - name: Test
+      - name: Lint
         if: ${{ always() }}
         run: npm run lint
 
