--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
-  "plugins": [],
+  "plugins": ["@babel/plugin-transform-react-jsx"],
   "env": {
     "production": {
       "presets": [
