chore: update version 0.1.0

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,10 @@
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
-  "plugins": ["@babel/plugin-transform-react-jsx"],
+  "plugins": [
+    "@babel/plugin-transform-react-jsx",
+    "@babel/plugin-transform-runtime"
+  ],
   "env": {
     "production": {
       "presets": [
