--- a/.github/workflows/storybook-deployment.yml
+++ b/.github/workflows/storybook-deployment.yml
@@ -2,7 +2,7 @@ name: Storybook Build & Deployment at Github Page
 
 on:
   push:
-    branches: [main, develop]
+    branches: ['v*']
     paths-ignore:
       - '**/*.md'
 
