--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "license": "MIT",
   "name": "@seolhun/root-ui",
   "version": "0.1.1",
-  "main": "dist/index.min.js",
+  "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/*",
@@ -55,7 +55,6 @@
     "@storybook/addon-links": "^6.5.10",
     "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
-    "@storybook/mdx2-csf": "^0.0.3",
     "@storybook/react": "^6.5.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
