--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
     "react-dom": ">=18.0.0"
   },
   "dependencies": {
+    "@fxts/core": "^0.9.0",
     "classnames": "^2.3.1",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/plugin-transform-react-jsx": "^7.18.10",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
