chore: update packages publish files path

--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "tailwind-config",
+    "tailwind.config.js"
+  ],
   "keywords": [
     "react",
     "tailwind",
