--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@fxts/core": "^0.9.0",
+    "@heroicons/react": "^2.0.10",
     "classnames": "^2.3.1",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
@@ -54,6 +55,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -112,6 +114,7 @@
     "ts-essentials": "^9.2.0",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4",
+    "typescript-transform-paths": "^3.3.1",
     "webpack": "^5.73.0"
   }
 }
