--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,10 @@
     "outDir": "dist",
     "declaration": true,
     "declarationDir": ".",
+    "plugins": [
+      { "transform": "typescript-transform-paths" },
+      { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
   },
   "include": [
     "src",
