chore(github): fix storybook github action

--- a/.github/workflows/storybook-deployment.yml
+++ b/.github/workflows/storybook-deployment.yml
@@ -2,7 +2,7 @@ name: Storybook Build & Deployment at Github Page
 
 on:
   push:
-    branches: ['v*']
+    branches: ['main']
     paths-ignore:
       - '**/*.md'
 
