--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@fxts/core": "^0.9.0",
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/aspect-ratio": "^0.4.1",
     "classnames": "^2.3.1",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
