--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "7.7.2",
     "prettier": "^2.3.1",
+    "react-popper": "^2.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.78.1",
     "rollup-plugin-postcss": "^4.0.2",
