--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,16 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react",
-    "@babel/preset-typescript"
+    ["@babel/preset-env", {
+      "useBuiltIns": "entry",
+      "corejs": "3"
+    }],
+    ["@babel/preset-typescript", {
+      "isTSX": true,
+      "allExtensions": true
+    }],
+    "@babel/preset-react"
   ],
   "plugins": [
-    "@babel/plugin-transform-react-jsx",
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-react-jsx"
   ]
 }
