--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@fxts/core": "^0.11.0",
-    "@heroicons/react": "^2.0.13",
+    "@heroicons/react": "1",
     "@tailwindcss/aspect-ratio": "^0.4.1",
     "classnames": "^2.3.1",
     "react": ">=18.0.0",
