chore: npm ci to npm i

--- a/.github/workflows/pr-build-test.yml
+++ b/.github/workflows/pr-build-test.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install Packages
         if: ${{ always() }}
-        run: npm ci
+        run: npm i
 
       - name: Lint
         if: ${{ always() }}
