--- a/.github/workflows/tag-publish.yml
+++ b/.github/workflows/tag-publish.yml
@@ -26,7 +26,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
 
       - name: Install Packages
-        run: npm ci
+        run: npm i
 
       - name: Build
         run: npm run build
