--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.4.8",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^8.2.5",
     "core-js": "^3.26.1",
     "css-loader": "^6.7.1",
@@ -111,7 +112,6 @@
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-essentials": "^9.2.0",
-    "ts-jest": "^28.0.8",
     "typescript": "^4.9.3",
     "typescript-transform-paths": "^3.4.4",
     "webpack": "^5.74.0"
