--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@fxts/core": "^0.11.0",
     "@heroicons/react": "1",
     "@tailwindcss/aspect-ratio": "^0.4.1",
-    "classnames": "^2.3.1",
+    "clsx": "^1.2.1",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
     "tailwindcss": "^3.1.8"
