--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-controls": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
+    "@storybook/addon-viewport": "^6.5.15",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
