--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   "browserslist": "> 0.25%, not dead",
   "peerDependencies": {
     "react": ">=18.0.0",
-    "react-dom": ">=18.0.0"
+    "react-dom": ">=18.0.0",
+    "tailwindcss": ">=3.0.0"
   },
   "dependencies": {
     "@fxts/core": "^0.11.0",
+    "@headlessui/react": "^1.7.7",
     "@heroicons/react": "1",
     "@tailwindcss/aspect-ratio": "^0.4.1",
     "clsx": "^1.2.1",
