--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "clsx": "^1.2.1",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": ">=3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -105,6 +105,7 @@
     "react-popper": "^2.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
