--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwindcss": ">=3.0.0"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.19.1",
     "@fxts/core": "^0.11.0",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "1",
