--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@heroicons/react": "1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^1.2.1",
+    "color": "^4.2.3",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
     "tailwindcss": ">=3.0.0"
