--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
+//npm.pkg.github.com/:_authToken=${SEOLHUN_GITHUB_TOKEN}
 @seolhun:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+always-auth=true
