--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/index.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/*",
-    "build": "rollup -c",
+    "build": "rollup -c --bundleConfigAsCjs",
     "start": "node express.js",
     "dev": "node build/dev-server.js",
     "test": "jest --coverage",
@@ -42,13 +42,12 @@
     "tailwindcss": ">=3.0.0"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.19.1",
+    "@floating-ui/react": "^0.22.2",
     "@fxts/core": "^0.14.0",
-    "@headlessui/react": "^1.7.11",
+    "@headlessui/react": "^1.7.13",
     "@heroicons/react": "1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^1.2.1",
-    "color": "^4.2.3",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
     "tailwindcss": ">=3.0.0"
@@ -60,9 +59,12 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@seolhun/eslint-config": "^1.1.0",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-controls": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
@@ -76,8 +78,8 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.1",
     "@types/react": "^18.0.25",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "4",
+    "@typescript-eslint/parser": "4",
     "autoprefixer": "^10.4.8",
     "babel-jest": "^29.3.1",
     "babel-loader": "^8.2.5",
@@ -85,14 +87,14 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "csstype": "^3.1.0",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-eslint-plugin": "^3.0.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "8",
+    "eslint-plugin-eslint-plugin": "3",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-jsx-a11y": "6",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-prettier": "3",
+    "eslint-plugin-react": "7",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.8",
     "identity-obj-proxy": "^3.0.0",
@@ -108,11 +110,10 @@
     "prettier": "^2.8.1",
     "react-popper": "^2.3.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.79.1",
+    "rollup": "^3.20.2",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
