chore: fix ci/cd

--- a/.github/workflows/dev-build-test.yml
+++ b/.github/workflows/dev-build-test.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Install Packages
         if: ${{ always() }}
         run: npm i
+        env:
+          SEOLHUN_GITHUB_TOKEN: ${{secrets.SEOLHUN_GITHUB_TOKEN}}
 
       - name: Lint
         if: ${{ always() }}
