--- a/.github/workflows/pr-build-test.yml
+++ b/.github/workflows/pr-build-test.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Install Packages
         if: ${{ always() }}
         run: npm i
+        env:
+          SEOLHUN_GITHUB_TOKEN: ${{secrets.SEOLHUN_GITHUB_TOKEN}}
 
       - name: Lint
         if: ${{ always() }}
