--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@floating-ui/react": "^0.22.2",
     "@fxts/core": "^0.14.0",
     "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "1",
+    "@heroicons/react": "^2.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
