--- a/.github/workflows/pr-build-test.yml
+++ b/.github/workflows/pr-build-test.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Build Storybook
         if: ${{ always() }}
-        run: npm run storybook:build
+        run: npm run build:storybook
 
       - name: Build
         if: ${{ always() }}
