--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "eslint --ext .js,.ts,.tsx,.jsx ./ --fix",
     "prettier": "prettier --write '**/*.{ts,tsx,js,jsx}'",
     "storybook": "start-storybook -p 6006",
-    "storybook:build": "build-storybook -o docs"
+    "build:storybook": "build-storybook -o docs"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
