--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "license": "MIT",
   "name": "@seolhun/root-ui",
-  "version": "0.7.1-1",
+  "version": "0.7.1",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "scripts": {
