--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "lint": "eslint --ext .js,.ts,.tsx,.jsx ./",
     "lint:fix": "eslint --ext .js,.ts,.tsx,.jsx ./ --fix",
     "prettier": "prettier --write '**/*.{ts,tsx,js,jsx}'",
-    "storybook": "start-storybook -p 6006",
-    "build:storybook": "build-storybook -o docs"
+    "storybook": "storybook dev -p 6006",
+    "build:storybook": "storybook build -o docs"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -46,6 +46,7 @@
     "@fxts/core": "^0.14.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "@storybook/cli": "^7.0.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "clsx": "^1.2.1",
@@ -67,13 +68,13 @@
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@seolhun/eslint-config": "^1.1.0",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-controls": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/addon-viewport": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/react": "^6.5.15",
+    "@storybook/addon-actions": "^7.0.5",
+    "@storybook/addon-controls": "^7.0.5",
+    "@storybook/addon-links": "^7.0.5",
+    "@storybook/addon-mdx-gfm": "^7.0.5",
+    "@storybook/addon-viewport": "^7.0.5",
+    "@storybook/react": "^7.0.5",
+    "@storybook/react-webpack5": "^7.0.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^7.0.2",
@@ -97,7 +98,7 @@
     "eslint-plugin-prettier": "3",
     "eslint-plugin-react": "7",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.8",
+    "eslint-plugin-storybook": "^0.6.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.3.1",
@@ -118,6 +119,7 @@
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
+    "storybook": "^7.0.5",
     "style-loader": "^3.3.1",
     "ts-essentials": "^9.2.0",
     "typescript": "^4.9.5",
