--- a/.github/workflows/tag-publish.yml
+++ b/.github/workflows/tag-publish.yml
@@ -13,7 +13,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
 
     steps:
       - name: Checkout
@@ -26,7 +26,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
 
       - name: Install Packages
-        run: npm i
+        run: npm ci
         env:
           SEOLHUN_GITHUB_TOKEN: ${{secrets.SEOLHUN_GITHUB_TOKEN}}
 
