--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@seolhun/eslint-config": "^1.1.0",
+    "@seolhun/eslint-config": "^1.2.0",
     "@storybook/addon-actions": "^7.0.5",
     "@storybook/addon-controls": "^7.0.5",
     "@storybook/addon-links": "^7.0.5",
@@ -80,8 +80,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.1",
     "@types/react": "^18.0.25",
-    "@typescript-eslint/eslint-plugin": "4",
-    "@typescript-eslint/parser": "4",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
     "autoprefixer": "^10.4.8",
     "babel-jest": "^29.3.1",
     "babel-loader": "^8.2.5",
@@ -89,16 +88,8 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "csstype": "^3.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "8",
-    "eslint-plugin-eslint-plugin": "3",
-    "eslint-plugin-import": "2",
-    "eslint-plugin-jsx-a11y": "6",
-    "eslint-plugin-node": "11",
-    "eslint-plugin-prettier": "3",
-    "eslint-plugin-react": "7",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-eslint-plugin": "^5.0.8",
+    "eslint-plugin-prettier": "^4.2.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.3.1",
