--- a/package.json
+++ b/package.json
@@ -45,14 +45,11 @@
     "@floating-ui/react": "^0.26.5",
     "@fxts/core": "^0.14.0",
     "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.0.17",
+    "@heroicons/react": "^2.1.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "clsx": "^1.2.1",
-    "color": "^4.2.3",
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
-    "tailwindcss": ">=3.0.0"
+    "color": "^4.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
