--- a/.github/workflows/pr-build-test.yml
+++ b/.github/workflows/pr-build-test.yml
@@ -8,36 +8,32 @@ on:
       - '**/*.md'
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
+    env:
+      GITHUB_TOKEN: ${{secrets.SEOLHUN_GITHUB_TOKEN}}
+      SEOLHUN_GITHUB_TOKEN: ${{secrets.SEOLHUN_GITHUB_TOKEN}}
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
+      - name: Setup Node.js & pnpm
+        uses: ./.github/actions/node-pnpm-setup
 
       - name: Install Packages
-        run: npm ci
-        env:
-          SEOLHUN_GITHUB_TOKEN: ${{secrets.SEOLHUN_GITHUB_TOKEN}}
+        run: pnpm i
 
       - name: Lint
         if: ${{ always() }}
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Test
         if: ${{ always() }}
-        run: npm run test
+        run: pnpm run test
 
       - name: Build Storybook
-        run: npm run build:storybook
+        run: pnpm run build:storybook
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
