--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-//npm.pkg.github.com/:_authToken=${SEOLHUN_GITHUB_TOKEN}
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
 @seolhun:registry=https://npm.pkg.github.com
 always-auth=true
