--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lint:fix": "eslint --ext .js,.ts,.tsx,.jsx ./ --fix",
     "prettier": "prettier --write '**/*.{ts,tsx,js,jsx}'",
     "storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build -o docs"
+    "build:storybook": "storybook build -o docs",
+    "changeset:add": "changeset add",
+    "changeset:version": "changeset version",
+    "changeset:publish": "changeset publish"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
