--- a/.github/workflows/storybook-deployment.yml
+++ b/.github/workflows/storybook-deployment.yml
@@ -1,10 +1,11 @@
 name: Storybook Build & Deployment at Github Page
 
 on:
-  push:
-    branches: ['main']
-    paths-ignore:
-      - '**/*.md'
+  workflow_dispatch:
+    inputs:
+      commit_sha:
+        description: 'commit sha for deployment'
+        type: string
 
 jobs:
   storybook-ci-cd:
@@ -16,6 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.sha != '' && github.event.inputs.sha || github.sha }}
 
       - name: Setup Node.js & pnpm
         uses: ./.github/actions/node-pnpm-setup
