chore: update tsup build

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,11 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "declaration": true,
-    "declarationDir": ".",
   },
   "include": [
     "src",
+    "@types"
   ],
   "exclude": [
     "src/stories",
