--- a/package.json
+++ b/package.json
@@ -2,11 +2,39 @@
   "license": "MIT",
   "name": "@seolhun/root-ui",
   "version": "0.8.2",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "types": "dist/legacy/index.d.ts",
+  "main": "dist/legacy/index.cjs",
+  "module": "dist/legacy/index.js",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/modern/index.d.ts",
+        "default": "./dist/modern/index.js"
+      },
+      "require": {
+        "types": "./dist/modern/index.d.cts",
+        "default": "./dist/modern/index.cjs"
+      }
+    },
+    "./modern/index.css": "./dist/modern/index.css",
+    "./legacy/index.css": "./dist/legacy/index.css",
+    "./package.json": "./package.json"
+  },
+  "publishConfig": {
+    "access": "restricted",
+    "registry": "https://npm.pkg.github.com"
+  },
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "tailwind-config",
+    "tailwind.config.js"
+  ],
   "scripts": {
+    "type:check": "tsc --noEmit --project tsconfig.build.json",
     "prebuild": "rimraf dist/*",
-    "build": "rollup -c --bundleConfigAsCjs",
+    "build": "tsup",
     "start": "node express.js",
     "dev": "node build/dev-server.js",
     "test": "jest --coverage",
@@ -19,16 +47,6 @@
     "changeset:version": "changeset version",
     "changeset:publish": "changeset publish"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md",
-    "tailwind-config",
-    "tailwind.config.js"
-  ],
   "keywords": [
     "react",
     "tailwind",
@@ -60,12 +78,6 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.18.6",
     "@changesets/cli": "^2.27.1",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@seolhun/eslint-config": "1.3.2",
     "@storybook/addon-actions": "^7.6.10",
     "@storybook/addon-controls": "^7.6.10",
@@ -85,13 +97,14 @@
     "babel-jest": "^29.3.1",
     "babel-loader": "^8.2.5",
     "core-js": "^3.26.1",
-    "css-loader": "^6.9.0",
+    "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "csstype": "^3.1.0",
+    "esbuild-plugin-svgr": "^2.1.0",
     "eslint-plugin-eslint-plugin": "^5.0.8",
     "eslint-plugin-prettier": "^5.1.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.3",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
@@ -102,18 +115,14 @@
     "postcss-preset-env": "7.7.2",
     "prettier": "^3.3.1",
     "react-popper": "^2.3.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^4.9.5",
-    "rollup-plugin-bundle-size": "^1.0.3",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.58.3",
-    "sass-loader": "^13.2.0",
+    "rimraf": "^5.0.7",
+    "sass": "^1.77.4",
+    "sass-loader": "^13.3.3",
     "storybook": "^7.6.10",
     "style-loader": "^3.3.1",
     "ts-essentials": "^9.2.0",
-    "typescript": "^4.9.5",
+    "tsup": "^8.1.0",
+    "typescript": "^5.3.3",
     "typescript-transform-paths": "^3.4.6",
     "webpack": "^5.76.2"
   }
