chore: fix the workflow regex

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -7,8 +7,8 @@ on:
       - main
   pull_request:
     branches:
-      - /^release/.*$/
-      - /^feature/.*$/
+      - /^release\/.*$/
+      - /^feature\/.*$/
     types: [opened, synchronize, reopened]
 
 jobs:
