chore: remove unnecessary callstack error

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "types": "dist/legacy/index.d.ts",
   "main": "dist/legacy/index.cjs",
   "module": "dist/legacy/index.js",
+  "type": "module",
   "exports": {
     ".": {
       "import": {
