refactor: revert tsup to use rollup

--- a/package.json
+++ b/package.json
@@ -2,29 +2,13 @@
   "license": "MIT",
   "name": "@seolhun/root-ui",
   "version": "0.8.3-alpha.1",
-  "types": "dist/legacy/index.d.ts",
-  "main": "dist/legacy/index.cjs",
-  "module": "dist/legacy/index.js",
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/modern/index.d.ts",
-        "default": "./dist/modern/index.js"
-      },
-      "require": {
-        "types": "./dist/modern/index.d.cts",
-        "default": "./dist/modern/index.cjs"
-      }
-    },
-    "./modern/index.css": "./dist/modern/index.css",
-    "./legacy/index.css": "./dist/legacy/index.css",
-    "./tailwind.config.js": "./tailwind.config.js",
-    "./package.json": "./package.json"
-  },
   "publishConfig": {
     "access": "restricted",
     "registry": "https://npm.pkg.github.com"
   },
+  "types": "dist/legacy/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "files": [
     "dist",
     "LICENSE",
@@ -35,7 +19,7 @@
   "scripts": {
     "type:check": "tsc --noEmit --project tsconfig.build.json",
     "prebuild": "rimraf dist/*",
-    "build": "tsup",
+    "build": "rollup -c --bundleConfigAsCjs",
     "test": "jest --coverage",
     "lint": "eslint --ext .js,.ts,.tsx,.jsx ./",
     "lint:fix": "eslint --ext .js,.ts,.tsx,.jsx ./ --fix",
@@ -79,6 +63,12 @@
     "@babel/preset-typescript": "^7.18.6",
     "@changesets/cli": "^2.27.1",
     "@chromatic-com/storybook": "^1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@seolhun/eslint-config": "1.3.2",
     "@storybook/addon-actions": "^8.1.6",
     "@storybook/addon-controls": "^8.1.6",
@@ -104,7 +94,6 @@
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "csstype": "^3.1.0",
-    "esbuild-plugin-svgr": "^2.1.0",
     "eslint-plugin-eslint-plugin": "^5.0.8",
     "eslint-plugin-prettier": "^5.1.3",
     "identity-obj-proxy": "^3.0.0",
@@ -120,12 +109,16 @@
     "prettier": "^3.3.1",
     "react-popper": "^2.3.0",
     "rimraf": "^5.0.7",
+    "rollup": "^4.9.5",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-scss": "^4.0.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.4",
     "sass-loader": "^13.3.3",
     "storybook": "^8.1.6",
     "style-loader": "^3.3.1",
     "ts-essentials": "^9.2.0",
-    "tsup": "^8.1.0",
     "typescript": "5.3.3",
     "typescript-transform-paths": "^3.4.6",
     "webpack": "^5.76.2"
