chore: update syntax files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,7 +53,12 @@
     ],
   },
   "include": [
-    "src",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.cjs",
+    "**/*.mjs",
     "@types",
   ],
   "exclude": [
