--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -14,9 +14,10 @@
   },
   "files": [
     "dist/",
-    "package.json",
+    "LICENSE",
     "CHANGELOG.md",
-    "README.md"
+    "README.md",
+    "package.json"
   ],
   "type": "module",
   "types": "dist/legacy/index.d.ts",
@@ -36,9 +37,9 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "prettier": "prettier --write './**/*.{ts,tsx,js,jsx}'",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./",
-    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx ./ --fix",
+    "prettier": "prettier --write './src/**/*.{ts,tsx,js,jsx}'",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx ./src --fix",
     "build": "tsup",
     "clear": "rm -rf dist",
     "test": "vitest --run"
