--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -7,7 +7,7 @@
   },
   "name": "@seolhun/root-tailwind-config",
   "description": "Root Tailwind Config",
-  "version": "0.8.3-alpha.5",
+  "version": "0.8.3",
   "publishConfig": {
     "access": "restricted",
     "registry": "https://npm.pkg.github.com"
