chore: update workflow

--- a/.github/workflows/storybook-deployment.yml
+++ b/.github/workflows/storybook-deployment.yml
@@ -24,11 +24,14 @@ jobs:
       - name: Install Packages
         run: pnpm i
 
+      - name: Build
+        run: pnpm run build
+
       - name: Build Storybook
         run: pnpm run build:storybook
 
       - name: Deploy Storybook
-        uses: JamesIves/github-pages-deploy-action@v4.2.5
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: storybook
           folder: ./packages/components/docs
