--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -7,7 +7,7 @@
   },
   "name": "@seolhun/root-ui-tailwind",
   "description": "Root Tailwind Config",
-  "version": "0.8.7-alpha.0",
+  "version": "0.8.7",
   "publishConfig": {
     "access": "restricted",
     "registry": "https://npm.pkg.github.com"
