chore: change restricted packages to public

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,7 +7,7 @@
     "@seolhun/root-eslint",
     "@seolhun/root-tsconfig"
   ],
-  "access": "restricted",
+  "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
