--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,7 +9,7 @@
   "description": "root-ui is a design system for React and tailwindcss.",
   "version": "0.8.8-alpha.8",
   "publishConfig": {
-    "access": "restricted",
+    "access": "public",
     "registry": "https://npm.pkg.github.com"
   },
   "files": [
