--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.8.3-alpha.5",
   "publishConfig": {
     "access": "public",
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
