chore: update node-sass to dart-sass

--- a/packages/tailwind-config/.npmrc
+++ b/packages/tailwind-config/.npmrc
@@ -1,3 +1,6 @@
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+@seolhun/eslint-config:registry=https://npm.pkg.github.com
+
 # //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
 # @seolhun:registry=https://npm.pkg.github.com
 @seolhun:registry=https://registry.npmjs.org/
