--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "name": "@seolhun/root-ui",
   "version": "0.8.3-alpha.5",
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -48,7 +47,7 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.27.5",
     "@chromatic-com/storybook": "^1",
-    "@seolhun/eslint-config": "1.3.2",
+    "@seolhun/eslint-config": "1.3.4",
     "@seolhun/root-eslint": "workspace:*",
     "@seolhun/root-tsconfig": "workspace:*",
     "@storybook/addon-actions": "^8.1.5",
@@ -79,7 +78,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^24.1.0",
     "mini-css-extract-plugin": "^2.7.2",
-    "node-sass": "^9.0.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
