--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,8 +9,7 @@
   "description": "root-ui is a design system for React and tailwindcss.",
   "version": "0.8.9-alpha.8",
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "files": [
     "dist",
@@ -65,7 +64,7 @@
     "tailwindcss": ">=3.0.0"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.19",
+    "@floating-ui/react": "^0.26.23",
     "@fxts/core": "^1.0.0",
     "@headlessui/react": "^2.1.1",
     "@seolhun/root-ui-tailwind": "workspace:*",
