--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -9,8 +9,7 @@
   "description": "Root Tailwind Config",
   "version": "0.8.9-alpha.0",
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "files": [
     "dist/",
